# python-otp-auth

./: Dockerfile  README.md  TODO.md  pyproject.toml  start.sh
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: c09a4d71399d_add_some_sample_data.py
app/: main.py
app/auth/: api.py  exceptions.py  managers.py  models.py
app/core/: middleware.py
app/db/: base.py  middleware.py  session.py
tests/: conftest.py
tests/api/login/: conftest.py  test_login.py  test_otp.py
