[tool.poetry]
name = "python-otp-auth"
version = "0.1.0"
description = ""
authors = ["Solomon Olatunji <realsolomon01@outlook.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
black = "^23.11.0"
pyotp = "^2.9.0"
passlib = "^1.7.4"
qrcode = "^7.4.2"
lxml = "^4.9.3"
itsdangerous = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ipython = "^8.18.1"
ipdb = "^0.13.13"
isort = "^5.12.0"
requests = "^2.31.0"
pytest-env = "^1.1.3"
pytest-cov = "^4.1.0"
pytest-spec = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
